# SITUACION-BANDAS

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  manual_run.yml  reports_scheduler.yml
apps_script/mail_gateway/: Code.js  appsscript.json
apps_script/situacion_bandas_bound/: .clasp.json  Code.js  appsscript.json
docs/: AUDITORIA_INICIAL_2026-03-26.md
scripts/: generate_annual_report.py  generate_monthly_report.py  generate_pending_reports.py  generate_weekly_report.py  preview_email.py  run_due_reports.py  send_email.py
src/: __init__.py  analytics.py  config.py  data_model.py  drive_service.py  history.py  insights.py  logging_utils.py  pipeline.py  sheets_reader.py
src/emailing/: __init__.py  preview.py  sender.py
src/reports/: __init__.py  charts.py  generator.py  naming.py  scheduler.py  templates.py  uploader.py
src/ui/: __init__.py  dashboard.py  reports_page.py
tests/: test_drive_cache.py  test_drive_paths.py  test_history.py  test_naming.py  test_pdf_idempotency.py  test_periods.py  test_pipeline_batch.py  test_status_mapping.py
