[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "situacion-bandas"
version = "0.1.0"
description = "Cuadro de mando e informes corporativos para SITUACION BANDAS."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "RUBEN COTON" }
]
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.2",
  "requests>=2.32.0",
  "python-dotenv>=1.0.1",
  "reportlab>=4.2.0",
  "matplotlib>=3.8.0",
  "streamlit>=1.34.0",
  "google-auth>=2.31.0",
  "google-auth-oauthlib>=1.2.0",
  "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
